--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "sequelize": "6.32.1",
+    "sequelize-cli": "6.6.1"
   },
   "devDependencies": {
     "eslint": "8.46.0",
