--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.2",
+    "mysql2": "^3.11.3",
     "sequelize": "6.32.1",
-    "sequelize-cli": "6.6.1"
+    "sequelize-cli": "6.6.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "eslint": "8.46.0",
